[gd_scene load_steps=6 format=3 uid="uid://5xrk7nvpwosj"]

[ext_resource type="Script" path="res://scenes/LeaderboardsView/LeaderboardsView.gd" id="1"]
[ext_resource type="FontFile" path="res://fonts/roboto-32b.tres" id="2"]
[ext_resource type="FontFile" path="res://fonts/roboto-16b.tres" id="3"]
[ext_resource type="PackedScene" path="res://scenes/UI/PrimaryButton.tscn" id="5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tgtn6"]

[node name="LeaderboardsView" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="Title" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2")
text = "Leaderboards"

[node name="VB" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SelectLeaderboardBtn" type="OptionButton" parent="VB"]
layout_mode = 2
size_flags_horizontal = 0

[node name="ViewLeaderboardBtn" parent="VB" instance=ExtResource("5")]
layout_mode = 2
size_flags_horizontal = 0
text = "View"

[node name="LeaderboardName" type="Label" parent="VB"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "Leaderboard Id"

[node name="LeaderboardDataRichTextLabel" type="RichTextLabel" parent="VB"]
layout_mode = 2
focus_mode = 2
theme_override_constants/table_h_separation = 16
theme_override_constants/table_v_separation = 4
theme_override_fonts/bold_font = ExtResource("3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tgtn6")
bbcode_enabled = true
text = "RankScoreUser"
fit_content = true
context_menu_enabled = true
selection_enabled = true
